--- a/ASSETS/assets/styles.css
+++ b/ASSETS/assets/styles.css
@@ -4,7 +4,6 @@
 
 * {
   outline: 1px solid red;
-
 }
 * .shrikhand-regular {
   font-family: "Shrikhand", serif;
@@ -54,17 +53,18 @@
 * .steps {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 228.38px;
-  gap: 10%;
+  gap: 0%;
 }
 * .cards-content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 300px;
-  height: 66px;
+  width: 93%;
+  height: 73px;
   padding: 0%;
   box-sizing: border-box;
   color: #000;
@@ -77,7 +77,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 43px;
+  width: 60%;
+  height: 73px;
 }
 * .ko {
   display: flex;
@@ -124,7 +125,7 @@
   align-items: center;
   flex-direction: row;
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   width: 100%;
   height: 22.67px;
   margin: 0px;
@@ -180,7 +181,7 @@
   display: flex;
   justify-content: center;
   text-align: center;
-  font-size: 40px;
+  font-size: 28px;
   margin-right: 0px;
   width: 62%;
   margin-left: 21%;
@@ -199,7 +200,7 @@
   justify-content: center;
   text-align: center;
   font-family: "Roboto", sans-serif;
-  width: 39%;
+  width: 45%;
   height: 49px;
   font-weight: lighter;
   font-size: 16px;
@@ -221,7 +222,7 @@
   background-color: #F6F6F6;
 }
 * .explore-button #gradient-btn {
-  width: 16%;
+  width: 22%;
   height: 50px;
   border-radius: 37px;
   border: none;
@@ -289,6 +290,7 @@
 }
 * #restaurants h2 {
   padding-top: 30px;
+  padding-left: 12%;
   padding-bottom: 0px;
   margin-top: 0px;
   margin-left: 0px;
@@ -296,13 +298,14 @@
 }
 * .card-section {
   display: grid;
-  align-items: center;
-  justify-content: center;
   grid-template-columns: 31% 31%;
-  gap: 85px;
-  width: 989px;
-  padding-left: 180px;
-  padding-right: 180px;
+  justify-content: center;
+  align-items: center;
+  gap: 14%;
+  width: 100%;
+  height: 558px;
+  margin-left: 0%;
+  margin-right: 0%;
 }
 * .card-content {
   display: flex;
@@ -330,7 +333,7 @@
   padding: 0px;
 }
 * .card-link {
-  width: 26%;
+  width: 100%;
   height: 240px;
   padding-left: 0px;
   padding-right: 0px;
@@ -370,20 +373,20 @@
   display: flex;
   justify-content: center;
   background-color: #EAEAEA;
-  width: 340px;
+  width: 100%;
   height: 240px;
   padding: 0px;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 * footer {
   display: flex;
-  padding-left: 5%;
+  padding-left: 0%;
+  padding-right: 2%;
   justify-content: end;
   gap: 20px;
   background-color: #353535;
   color: white;
   align-items: flex-end;
-  gap: 20px;
 }
 * footer .footer-section {
   display: flex;
@@ -410,11 +413,12 @@
   gap: 20px;
   margin-top: 16px;
 }
+
 @media screen and (min-width: 769px) and (max-width: 1024px) {
-  * header {
+  header {
     box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
   }
-  * .navbar {
+  .navbar {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -423,43 +427,43 @@
     background-color: white;
     padding: 0px;
   }
-  * .navbar .logo {
+  .navbar .logo {
     width: 15%;
     height: 34.2px;
   }
-  * body {
+  body {
     margin: 0%;
   }
-  * main {
+  main {
     width: 100%;
   }
-  * .cards {
+  .cards {
     width: 100%;
     height: 42px;
     background-color: #EAEAEA;
     padding: 0px;
     box-shadow: 0px 4.5px 9px 1px rgb(0, 0, 0);
   }
-  * .three-cards-set {
+  .three-cards-set {
     display: flex;
     flex-direction: row;
     width: 100%;
     height: 228.38px;
     padding-top: 0px;
   }
-  * .steps {
+  .steps {
     display: flex;
     flex-direction: row;
     align-items: center;
     width: 100%;
     height: 228.38px;
-    gap: 10%;
+    gap: 0%;
   }
-  * .cards-content {
+  .cards-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 300px;
+    width: 85%;
     height: 66px;
     padding: 0%;
     box-sizing: border-box;
@@ -469,13 +473,14 @@
     border-radius: 20px;
     gap: 10%;
   }
-  * .ok {
+  .ok {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 43px;
+    width: 100%;
   }
-  * .ko {
+  .ko {
     display: flex;
     justify-content: start;
     width: 25px;
@@ -483,7 +488,7 @@
     top: 1px;
     left: 9px;
   }
-  * .cards-txt {
+  .cards-txt {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -495,19 +500,19 @@
     height: 74.25px;
     padding: 0px;
   }
-  * .svg-steps {
+  .svg-steps {
     display: flex;
     justify-content: space-around;
     padding-right: 23px;
     padding-left: 25px;
   }
-  * .svg-circle {
+  .svg-circle {
     position: relative;
     top: 1px;
     left: 9px;
     padding-right: 0px;
   }
-  * .cards-link {
+  .cards-link {
     width: 100%;
     height: 240px;
     display: flex;
@@ -515,19 +520,19 @@
     padding-left: 0px;
     padding-right: 0px;
   }
-  * .cards-title {
+  .cards-title {
     display: flex;
     align-items: center;
     flex-direction: row;
     font-family: "Roboto Condensed", sans-serif;
-    font-size: 16px;
+    font-size: 12px;
     width: 100%;
     height: 22.67px;
     margin: 0px;
     margin-top: 0%;
     padding-left: 0px;
   }
-  * .cards-subtitle {
+  .cards-subtitle {
     font-size: 17px;
     width: 326px;
     height: 28px;
@@ -535,17 +540,17 @@
     margin: 0px;
     padding-left: 4%;
   }
-  * svg {
+  svg {
     display: flex;
     justify-content: space-around;
     padding-right: 10px;
   }
-  * .new-badge {
+  .new-badge {
     position: absolute;
     top: 10px;
     right: 10px;
   }
-  * .location {
+  .location {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -561,25 +566,25 @@
     margin-bottom: 0%;
     box-shadow: 0px 0.1px 0.5px 0px rgba(9, 0, 0, 0.5);
   }
-  * .menu {
+  .menu {
     padding-top: 1%;
     height: 239px;
     background-color: #F6F6F6;
     box-shadow: 0px 0.5px 5px 1px rgb(0, 0, 0);
   }
-  * .hp-block {
+  .hp-block {
     width: 100%;
     height: 205px;
   }
-  * h1 {
+  h1 {
     font-family: roboto-regular, sans-serif;
     display: flex;
     justify-content: center;
     text-align: center;
-    font-size: 40px;
+    font-size: 22px;
     margin-right: 0px;
-    width: 62%;
-    margin-left: 21%;
+    width: 100%;
+    margin-left: 0%;
     margin-right: 0px;
     margin-bottom: 0px;
     padding-left: 0px;
@@ -587,28 +592,28 @@
     height: 47px;
     background-color: #F6F6F6;
   }
-  * h1 .title-br {
+  h1 .title-br {
     display: none;
   }
-  * .text-hp {
+  .text-hp {
     display: flex;
     justify-content: center;
     text-align: center;
     font-family: "Roboto", sans-serif;
-    width: 39%;
+    width: 100%;
     height: 49px;
     font-weight: lighter;
     font-size: 16px;
     padding-left: 0px;
     padding-right: 0px;
     padding-bottom: 0%;
-    margin-left: 32%;
+    margin-left: 0%;
     margin-bottom: 0%;
     margin-top: 0px;
     color: #000;
     background-color: #F6F6F6;
   }
-  * .explore-button {
+  .explore-button {
     width: 100%;
     height: 50px;
     display: flex;
@@ -616,8 +621,8 @@
     align-items: center;
     background-color: #F6F6F6;
   }
-  * .explore-button #gradient-btn {
-    width: 16%;
+  .explore-button #gradient-btn {
+    width: 28%;
     height: 50px;
     border-radius: 37px;
     border: none;
@@ -630,15 +635,15 @@
     padding-right: 0px;
     text-decoration: none;
   }
-  * .explore-button :hover {
+  .explore-button :hover {
     color: #F6F6F6;
   }
-  * #gradient-btn {
+  #gradient-btn {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  * #gradient-btn a {
+  #gradient-btn a {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -646,12 +651,12 @@
     color: white;
     padding-top: 5%;
   }
-  * .Fonctionement {
+  .Fonctionement {
     width: 100%;
     height: 260px;
     margin-top: 0%;
   }
-  * .Fonctionement h2 {
+  .Fonctionement h2 {
     width: 73%;
     font-size: 26px;
     font-family: roboto-regular, sans-serif;
@@ -659,13 +664,13 @@
     margin-bottom: 0px;
     margin-top: 3%;
   }
-  * h2 {
+  h2 {
     width: 73%;
     margin-bottom: 0px;
     margin-left: 4%;
     margin-top: 10%;
   }
-  * ul .cards {
+  ul .cards {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -673,34 +678,34 @@
     padding: 0px;
     box-shadow: 0px 1px 3px 0px rgba(9, 0, 0, 0.5);
   }
-  * .restaurant-cards {
+  .restaurant-cards {
     background-color: #F6F6F6;
     margin-bottom: 0px;
     padding-bottom: 30px;
   }
-  * #restaurants {
+  #restaurants {
     display: flex;
     flex-direction: column;
     gap: 20px;
   }
-  * #restaurants h2 {
+  #restaurants h2 {
     padding-top: 30px;
     padding-bottom: 0px;
     margin-top: 0px;
     margin-left: 0px;
     margin-bottom: 2%;
   }
-  * .card-section {
+  .card-section {
     display: grid;
     align-items: center;
     justify-content: center;
-    grid-template-columns: 31% 31%;
-    gap: 85px;
-    width: 989px;
-    padding-left: 180px;
-    padding-right: 180px;
+    grid-template-columns: 44% 44%;
+    gap: 25px;
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
   }
-  * .card-content {
+  .card-content {
     display: flex;
     align-items: start;
     width: 100%;
@@ -715,7 +720,7 @@
     background-color: white;
     border-radius: 0px 0px 15px 15px;
   }
-  * .card-txt {
+  .card-txt {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -725,13 +730,13 @@
     height: 74.25px;
     padding: 0px;
   }
-  * .card-link {
+  .card-link {
     width: 26%;
     height: 240px;
     padding-left: 0px;
     padding-right: 0px;
   }
-  * .card-title {
+  .card-title {
     font-size: 18px;
     width: 326px;
     height: 24px;
@@ -739,7 +744,7 @@
     padding-top: 13px;
     padding-left: 4%;
   }
-  * .card-subtitle {
+  .card-subtitle {
     font-size: 17px;
     width: 326px;
     height: 28px;
@@ -747,7 +752,7 @@
     margin: 0px;
     padding-left: 4%;
   }
-  * .card img {
+  .card img {
     width: 100%;
     height: 174px;
     object-fit: cover;
@@ -756,13 +761,13 @@
     justify-content: center;
     align-items: center;
   }
-  * .card-set {
+  .card-set {
     width: 100%;
   }
-  * .euro {
+  .euro {
     font-weight: 700;
   }
-  * .card {
+  .card {
     display: flex;
     justify-content: center;
     background-color: #EAEAEA;
@@ -771,7 +776,7 @@
     padding: 0px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
   }
-  * footer {
+  footer {
     display: flex;
     padding-left: 5%;
     justify-content: end;
@@ -781,18 +786,18 @@
     align-items: flex-end;
     gap: 20px;
   }
-  * footer .footer-section {
+  footer .footer-section {
     display: flex;
     flex-direction: row;
   }
-  * footer p {
+  footer p {
     display: flex;
     padding-bottom: 2%;
     margin: 0px;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
   }
-  * footer h3 {
+  footer h3 {
     margin-right: 20px;
     display: flex;
     justify-content: flex-end;
@@ -800,27 +805,27 @@
     font-size: 16px;
     font-family: "Shrikhand", serif;
   }
-  * footer .footer-text {
+  footer .footer-text {
     display: flex;
     flex-direction: row;
     gap: 20px;
     margin-top: 16px;
   }
 }
-@media only screen and (min-width: 769px) and (max-width: 1024px) and (max-width: 768px) {
-  * .shrikhand-regular {
+@media only screen and (max-width: 768px) {
+  .shrikhand-regular {
     font-family: "Shrikhand", serif;
   }
-  * .roboto-regular {
+  .roboto-regular {
     font-family: "Roboto", sans-serif;
   }
-  * .link {
+  .link {
     text-decoration: none;
   }
-  * header {
+  header {
     box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
   }
-  * .navbar {
+  .navbar {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -829,32 +834,32 @@
     background-color: white;
     padding: 0px;
   }
-  * .navbar .logo {
+  .navbar .logo {
     width: 53%;
     height: 34.2px;
     object-fit: contain;
   }
-  * body {
+  body {
     margin: 0%;
   }
-  * main {
+  main {
     width: 100%;
   }
-  * .cards {
+  .cards {
     width: 100%;
     height: 42px;
     background-color: #EAEAEA;
     padding: 0px;
     box-shadow: 0px 4.5px 9px 1px rgb(0, 0, 0);
   }
-  * .three-cards-set {
+  .three-cards-set {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 440px;
     padding-top: 0px;
   }
-  * .steps {
+  .steps {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -863,7 +868,7 @@
     height: 409px;
     gap: 18%;
   }
-  * .cards-content {
+  .cards-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -877,14 +882,14 @@
     border-radius: 20px;
     gap: 10%;
   }
-  * .ok {
+  .ok {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 90%;
     height: 43px;
   }
-  * .ko {
+  .ko {
     display: flex;
     justify-content: start;
     width: 25px;
@@ -892,7 +897,7 @@
     top: 1px;
     left: 9px;
   }
-  * .cards-txt {
+  .cards-txt {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -904,19 +909,19 @@
     height: 74.25px;
     padding: 0px;
   }
-  * .svg-steps {
+  .svg-steps {
     display: flex;
     justify-content: space-around;
     padding-right: 23px;
     padding-left: 25px;
   }
-  * .svg-circle {
+  .svg-circle {
     position: relative;
     top: 1px;
     left: 9px;
     padding-right: 0px;
   }
-  * .cards-link {
+  .cards-link {
     width: 100%;
     height: 240px;
     display: flex;
@@ -924,7 +929,7 @@
     padding-left: 0px;
     padding-right: 0px;
   }
-  * .cards-title {
+  .cards-title {
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -936,7 +941,7 @@
     margin-top: 0%;
     padding-left: 0px;
   }
-  * .cards-subtitle {
+  .cards-subtitle {
     font-size: 17px;
     width: 326px;
     height: 28px;
@@ -944,17 +949,17 @@
     margin: 0px;
     padding-left: 4%;
   }
-  * svg {
+  svg {
     display: flex;
     justify-content: space-around;
     padding-right: 10px;
   }
-  * .new-badge {
+  .new-badge {
     position: absolute;
     top: 10px;
     right: 10px;
   }
-  * .location {
+  .location {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -970,17 +975,17 @@
     margin-bottom: 0%;
     box-shadow: 0px 0.1px 0.5px 0px rgba(9, 0, 0, 0.5);
   }
-  * .menu {
+  .menu {
     padding-top: 1%;
     height: 225px;
     background-color: #F6F6F6;
     box-shadow: 0px 0.5px 5px 1px rgb(0, 0, 0);
   }
-  * .hp-block {
+  .hp-block {
     width: 100%;
     height: 205px;
   }
-  * h1 {
+  h1 {
     font-family: roboto-regular, sans-serif;
     display: flex;
     justify-content: center;
@@ -996,10 +1001,10 @@
     height: 68px;
     background-color: #F6F6F6;
   }
-  * h1 .title-br {
+  h1 .title-br {
     display: block;
   }
-  * .text-hp {
+  .text-hp {
     display: flex;
     justify-content: center;
     text-align: center;
@@ -1017,7 +1022,7 @@
     color: #000;
     background-color: #F6F6F6;
   }
-  * .explore-button {
+  .explore-button {
     width: 100%;
     height: 50px;
     display: flex;
@@ -1025,7 +1030,7 @@
     align-items: center;
     background-color: #F6F6F6;
   }
-  * .explore-button #gradient-btn {
+  .explore-button #gradient-btn {
     width: 58%;
     height: 50px;
     border-radius: 37px;
@@ -1039,15 +1044,15 @@
     padding-right: 0px;
     text-decoration: none;
   }
-  * .explore-button :hover {
+  .explore-button :hover {
     color: #F6F6F6;
   }
-  * #gradient-btn {
+  #gradient-btn {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  * #gradient-btn a {
+  #gradient-btn a {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1055,12 +1060,12 @@
     color: white;
     padding-top: 5%;
   }
-  * .Fonctionement {
+  .Fonctionement {
     width: 100%;
     height: 440px;
     margin-top: 0%;
   }
-  * .Fonctionement h2 {
+  .Fonctionement h2 {
     width: 73%;
     font-size: 26px;
     font-family: roboto-regular, sans-serif;
@@ -1069,13 +1074,13 @@
     margin-top: 3%;
     margin-left: 7%;
   }
-  * h2 {
+  h2 {
     width: 73%;
     margin-bottom: 0px;
     margin-left: 4%;
     margin-top: 10%;
   }
-  * ul .cards {
+  ul .cards {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1083,33 +1088,34 @@
     padding: 0px;
     box-shadow: 0px 1px 3px 0px rgba(9, 0, 0, 0.5);
   }
-  * .restaurant-cards {
+  .restaurant-cards {
     background-color: #F6F6F6;
     margin-bottom: 0px;
     padding-bottom: 30px;
   }
-  * #restaurants {
+  #restaurants {
     display: flex;
     flex-direction: column;
     gap: 20px;
   }
-  * #restaurants h2 {
+  #restaurants h2 {
     padding-top: 30px;
     padding-bottom: 0px;
     margin-top: 0px;
     margin-left: 23px;
     margin-bottom: 5%;
   }
-  * .card-section {
+  .card-section {
     display: grid;
     align-items: center;
     justify-content: center;
     grid-template-columns: 90%;
     gap: 18px;
     width: 100%;
+    height: 1015px;
     padding: 0%;
   }
-  * .card-content {
+  .card-content {
     display: flex;
     align-items: start;
     width: 100%;
@@ -1124,7 +1130,7 @@
     background-color: white;
     border-radius: 0px 0px 15px 15px;
   }
-  * .card-txt {
+  .card-txt {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -1134,13 +1140,13 @@
     height: 74.25px;
     padding: 0px;
   }
-  * .card-link {
+  .card-link {
     width: 100%;
     height: 240px;
     padding-left: 0px;
     padding-right: 0px;
   }
-  * .card-title {
+  .card-title {
     font-size: 18px;
     width: 326px;
     height: 24px;
@@ -1148,7 +1154,7 @@
     padding-top: 13px;
     padding-left: 4%;
   }
-  * .card-subtitle {
+  .card-subtitle {
     font-size: 17px;
     width: 326px;
     height: 28px;
@@ -1156,7 +1162,7 @@
     margin: 0px;
     padding-left: 4%;
   }
-  * .card img {
+  .card img {
     width: 100%;
     height: 174px;
     object-fit: cover;
@@ -1165,13 +1171,13 @@
     justify-content: center;
     align-items: center;
   }
-  * .card-set {
+  .card-set {
     width: 100%;
   }
-  * .euro {
+  .euro {
     font-weight: 700;
   }
-  * .card {
+  .card {
     display: flex;
     justify-content: center;
     background-color: #EAEAEA;
@@ -1180,7 +1186,7 @@
     padding: 0px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
   }
-  * footer {
+  footer {
     display: flex;
     padding-left: 5%;
     justify-content: center;
@@ -1190,19 +1196,19 @@
     align-items: flex-end;
     gap: 20px;
   }
-  * footer .footer-section {
+  footer .footer-section {
     display: flex;
     flex-direction: column;
     width: 100%;
   }
-  * footer p {
+  footer p {
     display: flex;
     padding-bottom: 2%;
     margin: 0px;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
   }
-  * footer h3 {
+  footer h3 {
     margin-right: 20px;
     display: flex;
     justify-content: center;
@@ -1210,12 +1216,13 @@
     font-size: 16px;
     font-family: "Shrikhand", serif;
   }
-  * footer .footer-text {
+  footer .footer-text {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 16px;
   }
+
 }
 
 /*# sourceMappingURL=styles.css.map */
