--- a/ASSETS/assets/styles.css
+++ b/ASSETS/assets/styles.css
@@ -1205,23 +1205,19 @@
   }
   .navbar #arrow {
     display: flex;
-    gap: 10px;
+    justify-content: center;
+    align-items: center;
   }
+}
+@media (max-width:768px) {
   .accueil-section {
     width: 100%;
     height: 275px;
   }
-  .images-bouff {
-    width: 50%;
+  .img-menu {
+    width: 100%;
   }
-  h1 {
-    font-size: 22px;
-  }
-  h2 {
-    font-size: 20px;
-    color: #9356DC;
-  }
-
 }
+
 
 /*# sourceMappingURL=styles.css.map */
