--- a/ASSETS/sass/main.scss
+++ b/ASSETS/sass/main.scss
@@ -1229,27 +1229,25 @@ h3 {
 
 }.navbar {
 #arrow { 
-display: flex;
-gap:10px;
+@include flexbox;
 }
+} 
 }
+
 // Accueil section //
-.accueil-section{
+@media #{$mobile}{
+.accueil-section {
     width: 100%;
     height: 275px;
 }
-.images-bouff{
-    width: 50%;
+
+.img-menu {
+    width: 100%;
 }
-h1 { 
-    font-size: 22px;
-}
-h2 { 
-    font-size: 20px;
-    color: #9356DC;
+
 }
 // Page 2 index html "La palette du goût"//
 
 // Header//
 
-  /*# sourceMappingURL=main.css.map */ }
+  /*# sourceMappingURL=main.css.map */
