--- a/ASSETS/assets/styles.css
+++ b/ASSETS/assets/styles.css
@@ -357,9 +357,6 @@
 * .card-set {
   width: 100%;
 }
-* .euro {
-  font-weight: 700;
-}
 * .card {
   display: flex;
   justify-content: center;
@@ -749,9 +746,6 @@
   }
   .card-set {
     width: 100%;
-  }
-  .euro {
-    font-weight: 700;
   }
   .card {
     display: flex;
@@ -1155,9 +1149,6 @@
   .card-set {
     width: 100%;
   }
-  .euro {
-    font-weight: 700;
-  }
   .card {
     display: flex;
     justify-content: center;
@@ -1203,21 +1194,104 @@
     gap: 20px;
     margin-top: 16px;
   }
-  .navbar #arrow {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
 }
 @media (max-width:768px) {
+  .arrow {
+    display: flex;
+    justify-content: start;
+  }
+  .arrow #arrow {
+    display: flex;
+    margin-right: 70px;
+  }
   .accueil-section {
     width: 100%;
-    height: 275px;
+    height: 251px;
   }
   .img-menu {
     width: 100%;
+    height: 275px;
+    background-size: cover;
   }
 }
+.price {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  background-color: #F6F6F6;
+  padding-top: 26px;
+  border-radius: 20px 20px 0px 0px;
+  margin-top: -21px;
+  position: relative;
+}
+.price .title-two {
+  width: 91%;
+  margin-top: 0px;
+  font-family: "Shrikhand", serif;
+  font-size: 28px;
+}
+.price .title-three {
+  width: 91%;
+  font-family: "Roboto", sans-serif;
+  font-weight: lighter;
+  font-size: 16px;
+  margin-left: 0px;
+}
+.price .colo {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+.price .colo .dessert {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding-top: 40px;
+  margin-bottom: 40px;
+}
+.price .colo .flat {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding-top: 40px;
+}
+.price .card-content {
+  width: 100%;
+  border-radius: 15.04px;
+}
+.price .card-content .card-title {
+  font-family: roboto-regular, sans-serif;
+  font-weight: normal;
+  font-size: 18px;
+  width: 96%;
+}
+.price .card-content .card-subtitle {
+  display: flex;
+  justify-content: space-between;
+  font-family: "Roboto", sans-serif;
+  font-weight: lighter;
+  font-size: 15.04px;
+  width: 96%;
+}
+.price .card-content .euro {
+  width: 27px;
+  font-weight: bold;
+}
+.price .card-content .card-txt {
+  width: 100%;
+}
+.price .explore-button {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #F6F6F6;
+  padding-bottom: 40px;
+}
+
 
 
 /*# sourceMappingURL=styles.css.map */
