--- a/ASSETS/sass/main.scss
+++ b/ASSETS/sass/main.scss
@@ -367,9 +367,6 @@ h2{
 .card-set{ 
 width: 100%;
 }
-.euro {
-    font-weight: 700;
-}
 .card {
     display: flex;
     justify-content: center;
@@ -767,9 +764,6 @@ width: 100%;
 
 }
 
-.euro {
-    font-weight: 700;
-}
 .card {
     display: flex;
     justify-content: center;
@@ -1177,9 +1171,6 @@ h2{
 .card-set{ 
 width: 100%;
 }
-.euro {
-    font-weight: 700;
-}
 .card {
     display: flex;
     justify-content: center;
@@ -1226,28 +1217,109 @@ h3 {
     gap: 20px;
     margin-top: 16px;
 }
-
-}.navbar {
-#arrow { 
-@include flexbox;
 }
-} 
-}
-
-// Accueil section //
-@media #{$mobile}{
-.accueil-section {
-    width: 100%;
-    height: 275px;
-}
-
-.img-menu {
-    width: 100%;
-}
-
 }
 // Page 2 index html "La palette du goût"//
+@media #{$mobile}{
 
-// Header//
+// Navbar-section//
+.arrow{ 
+    display: flex;
+    justify-content: start;
+#arrow {
+    display: flex;
+    margin-right: 70px;
+} 
+}
+// Accueil section //    
+.accueil-section {
+    width: 100%;
+    height: 251px;
+}
+.img-menu {
+    width: 100%;
+    height: 275px;
+    background-size: cover;
+    // position: absolute;
+}
+}
+// section-price
+.price {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    background-color: $Background-color;
+    padding-top: 26px;
+    border-radius: 20px 20px 0px 0px;
+    margin-top: -21px; 
+    position: relative;
+.title-two{ 
+    width: 91%;
+    margin-top: 0px;
+    font-family: $font-stack3;
+    font-size: 28px;
+}
+.title-three{
+    width: 91%;
+    font-family: $font-stack2;
+    font-weight: lighter;
+    font-size: 16px;
+    margin-left: 0px;
+}
+.colo {
+    @include flexdirectioncolumn;
+    gap: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+.dessert {
+    @include flexdirectioncolumn;
+    gap:15px;
+    padding-top: 40px;
+    margin-bottom: 40px;
+}
+.flat {
+    @include flexdirectioncolumn;
+    gap:15px;
+    padding-top: 40px;
+}
+}
+.card-content {
+    width: 100%;
+    border-radius: 15.04px;
+.card-title { 
+    font-family:$font-stack;
+    font-weight:normal;
+    font-size: 18px;
+    width: 96%;
+}
+.card-subtitle { 
+    display: flex;
+    justify-content: space-between;
+    font-family: $font-stack2;
+    font-weight: lighter;
+    font-size: 15.04px;
+    width: 96%;
+}
+.euro {
+    
+    width:27px;
+    font-weight: bold;
+    // margin-right: 14px;
+}
+.card-txt {
+    width: 100%;
+}
+}
+.explore-button{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:$Background-color;
+    padding-bottom: 40px;
+}
+
+}
 
   /*# sourceMappingURL=main.css.map */
