--- a/ASSETS/assets/styles.css
+++ b/ASSETS/assets/styles.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap);
 * {
   outline: 1px solid red;
 }
@@ -145,7 +146,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: roboto-regular, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   color: #353535;
   width: 30%;
@@ -168,7 +169,7 @@
   height: 205px;
 }
 * h1 {
-  font-family: roboto-regular, sans-serif;
+  font-family: "Roboto", sans-serif;
   display: flex;
   justify-content: center;
   text-align: center;
@@ -210,17 +211,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #F6F6F6;
 }
 * .explore-button #gradient-btn {
-  width: 22%;
+  width: 15%;
   height: 50px;
   border-radius: 37px;
   border: none;
   background: linear-gradient(3deg, #9356DC 0%, #FF79DA 100%);
   box-shadow: 0px 4px 9.5px 0px rgba(9, 0, 0, 0.5);
   color: white;
-  font-family: roboto-regular, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   padding-left: 0px;
   padding-right: 0px;
@@ -250,7 +250,7 @@
 * .Fonctionement h2 {
   width: 73%;
   font-size: 26px;
-  font-family: roboto-regular, sans-serif;
+  font-family: "Roboto", sans-serif;
   padding-left: 3%;
   margin-bottom: 0px;
   margin-top: 3%;
@@ -309,7 +309,7 @@
   justify-content: space-between;
   box-sizing: border-box;
   color: #000;
-  font-family: roboto-regular, sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: white;
   border-radius: 0px 0px 15px 15px;
 }
@@ -482,7 +482,7 @@
   border-radius: 15.04px;
 }
 .price .card-content .card-title {
-  font-family: roboto-regular, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: normal;
   font-size: 18px;
   width: 96%;
@@ -648,7 +648,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: roboto-regular, sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
     color: #353535;
     width: 30%;
@@ -671,7 +671,7 @@
     height: 205px;
   }
   h1 {
-    font-family: roboto-regular, sans-serif;
+    font-family: "Roboto", sans-serif;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -716,14 +716,15 @@
     background-color: #F6F6F6;
   }
   .explore-button #gradient-btn {
-    width: 28%;
+    text-align: center;
+    width: 100%;
     height: 50px;
     border-radius: 37px;
     border: none;
     background: linear-gradient(3deg, #9356DC 0%, #FF79DA 100%);
     box-shadow: 0px 4px 9.5px 0px rgba(9, 0, 0, 0.5);
     color: white;
-    font-family: roboto-regular, sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
     padding-left: 0px;
     padding-right: 0px;
@@ -753,7 +754,7 @@
   .Fonctionement h2 {
     width: 73%;
     font-size: 26px;
-    font-family: roboto-regular, sans-serif;
+    font-family: "Roboto", sans-serif;
     padding-left: 3%;
     margin-bottom: 0px;
     margin-top: 3%;
@@ -810,7 +811,7 @@
     justify-content: space-between;
     box-sizing: border-box;
     color: #000;
-    font-family: roboto-regular, sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color: white;
     border-radius: 0px 0px 15px 15px;
   }
@@ -963,8 +964,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 75%;
-    height: 72.38px;
+    width: 100%;
+    height: 65.38px;
     padding: 0%;
     box-sizing: border-box;
     color: #000;
@@ -1049,7 +1050,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: roboto-regular, sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
     color: #353535;
     width: 30%;
@@ -1072,15 +1073,15 @@
     height: 205px;
   }
   h1 {
-    font-family: roboto-regular, sans-serif;
+    font-family: "Roboto", sans-serif;
     display: flex;
     justify-content: center;
     text-align: center;
     font-size: 24px;
     margin-right: 0px;
-    width: 73%;
-    margin-left: 16%;
-    margin-right: 0px;
+    width: 100%;
+    margin-top: 0px;
+    margin-left: 0px;
     margin-bottom: 0px;
     padding-left: 0px;
     padding-right: 0px;
@@ -1095,14 +1096,14 @@
     justify-content: center;
     text-align: center;
     font-family: "Roboto", sans-serif;
-    width: 84%;
+    width: 100%;
     height: 49px;
     font-weight: lighter;
     font-size: 16px;
     padding-left: 0px;
     padding-right: 0px;
     padding-bottom: 0%;
-    margin-left: 10%;
+    margin-left: 0%;
     margin-bottom: 0%;
     margin-top: 0px;
     color: #000;
@@ -1111,20 +1112,20 @@
   .explore-button {
     width: 100%;
     height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: #F6F6F6;
   }
   .explore-button #gradient-btn {
-    width: 58%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    width: 68%;
     height: 50px;
     border-radius: 37px;
     border: none;
     background: linear-gradient(3deg, #9356DC 0%, #FF79DA 100%);
     box-shadow: 0px 4px 9.5px 0px rgba(9, 0, 0, 0.5);
     color: white;
-    font-family: roboto-regular, sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
     padding-left: 0px;
     padding-right: 0px;
@@ -1154,7 +1155,7 @@
   .Fonctionement h2 {
     width: 73%;
     font-size: 26px;
-    font-family: roboto-regular, sans-serif;
+    font-family: "Roboto", sans-serif;
     padding-left: 3%;
     margin-bottom: 0px;
     margin-top: 3%;
@@ -1212,7 +1213,7 @@
     justify-content: space-between;
     box-sizing: border-box;
     color: #000;
-    font-family: roboto-regular, sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color: white;
     border-radius: 0px 0px 15px 15px;
   }
@@ -1222,7 +1223,7 @@
     flex-direction: column;
     text-overflow: ellipsis;
     box-sizing: border-box;
-    width: 339px;
+    width: 245px;
     height: 74.25px;
     padding: 0px;
   }
@@ -1234,7 +1235,7 @@
   }
   .card-title {
     font-size: 18px;
-    width: 326px;
+    width: 245px;
     height: 24px;
     margin: 0px;
     padding-top: 13px;
@@ -1242,7 +1243,7 @@
   }
   .card-subtitle {
     font-size: 17px;
-    width: 326px;
+    width: 245px;
     height: 28px;
     margin-top: 8px;
     margin: 0px;
@@ -1384,7 +1385,7 @@
   border-radius: 15.04px;
 }
 .price .card-content .card-title {
-  font-family: roboto-regular, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: normal;
   font-size: 18px;
   width: 96%;
@@ -1492,7 +1493,7 @@
     border-radius: 15.04px;
   }
   .price .card-content .card-title {
-    font-family: roboto-regular, sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: normal;
     font-size: 18px;
     width: 96%;
