--- a/ASSETS/sass/main.scss
+++ b/ASSETS/sass/main.scss
@@ -220,9 +220,9 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:$Background-color;
+    // background-color:$Background-color;
 #gradient-btn{
-    width: 22%;
+    width: 15%;
     height: 50px;
     border-radius: 37px;
     border:none;
@@ -461,12 +461,12 @@ main {
     margin-left: 0px;
 }
 .border-bottom{
-    border-bottom: solid 3px #99E2D0;
+    border-bottom: solid 3px $main-Tertiary;
     padding-bottom: 2px;
     width: 17%;
 }
 .border-btm{
-    border-bottom: solid 3px #99E2D0;
+    border-bottom: solid 3px $main-Tertiary;
     padding-bottom: 2px;
     width: 11%;
 }
@@ -731,7 +731,8 @@ h1 {
     align-items: center;
     background-color:$Background-color;
 #gradient-btn{
-    width: 28%;
+    text-align: center;
+    width: 100%;
     height: 50px;
     border-radius: 37px;
     border:none;
@@ -980,8 +981,8 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 75%;
-    height: 72.38px;
+    width: 100%;
+    height: 65.38px;
     padding:0%;
     box-sizing: border-box;
     color: #000;
@@ -1099,9 +1100,9 @@ h1 {
     text-align: center;;
     font-size: 24px;
     margin-right: 0px;
-    width: 73%;
-    margin-left: 16%;
-    margin-right: 0px;
+    width: 100%;
+    margin-top: 0px;
+    margin-left: 0px;
     margin-bottom: 0px;
     padding-left: 0px;
     padding-right: 0px;
@@ -1116,14 +1117,14 @@ h1 {
     justify-content: center;
     text-align: center;
     font-family:$font-stack2;
-    width: 84%;
+    width: 100%;
     height: 49px;
     font-weight: lighter;
     font-size: 16px;
     padding-left: 0px;
     padding-right: 0px;
     padding-bottom: 0%;
-    margin-left: 10%;
+    margin-left: 0%;
     margin-bottom: 0%;
     margin-top: 0px;
     color: #000;
@@ -1132,12 +1133,12 @@ h1 {
 .explore-button{
     width: 100%;
     height: 50px;
+    background-color:$Background-color;
+#gradient-btn{
     display: flex;
     justify-content: center;
-    align-items: center;
-    background-color:$Background-color;
-    #gradient-btn{
-    width: 58%;
+    text-align: center;
+    width: 68%;
     height: 50px;
     border-radius: 37px;
     border:none;
@@ -1244,7 +1245,7 @@ h2{
     flex-direction: column;
     text-overflow: ellipsis;
     box-sizing: border-box;
-    width: 339px;
+    width: 245px;
     height: 74.25px;
     padding: 0px;
 }
@@ -1256,7 +1257,7 @@ h2{
 }
 .card-title {
     font-size: 18px;
-    width: 326px;
+    width: 245px;
     height: 24px;
     margin: 0px;
     padding-top: 13px;
@@ -1264,7 +1265,7 @@ h2{
 }
 .card-subtitle {
     font-size: 17px;
-    width: 326px;
+    width: 245px;
     height: 28px;
     margin-top:8px;
     margin: 0px;
